--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Aprendiendo Git y Github con Platzi Expert</h1>
+    <h2>Este es el ejemplo de usos de git estando en mitad del curso</h2>
         <span class="span">git init: lo usamos para determinar la carpeta en la que vamos a trabajar.</span>
         <span class="span">git status: lo usamos para saber si tenemos un archivo añadido o borrado en nuestro proyecto, para saber
             en la
