Comentario desde github

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Aprendiendo Git y Github con Platzi Expert</h1>
     <h2>Este es el ejemplo de usos de git estando en mitad del curso</h2>
+    <!-- ESte comentario fue hecho desde github para llevar a la rama local por git -->
     <div class="spans">
         <span class="span">git init: lo usamos para determinar la carpeta en la que vamos a trabajar.</span> <br>
         <span class="span">git status: lo usamos para saber si tenemos un archivo añadido o borrado en nuestro proyecto, para saber
