--- a/blogpost.html
+++ b/blogpost.html
@@ -10,52 +10,68 @@
 </head>
 
 <body>
-    <h1>Aprendiendo Git y Github con Platzi Expert</h1>
+    <header class="header">
+            <img id="icono" src="./imagenes/platzi.svg" alt="icono_platzi">
+        <div>
+            <h1 class="titulo">Aprendiendo Git y Github con Platzi Expert</h1>
+        </div>
+    </header>
     <h2>Este es el ejemplo de usos de git estando en mitad del curso</h2>
     <!-- ESte comentario fue hecho desde github para llevar a la rama local por git -->
     <!-- Comentario de cambio de HTTPS a SSH y comprobar su funcionamiento-->
     <div class="spans">
         <span class="span">git init: lo usamos para determinar la carpeta en la que vamos a trabajar.</span> <br>
-        <span class="span">git status: lo usamos para saber si tenemos un archivo añadido o borrado en nuestro proyecto, para saber
+        <span class="span">git status: lo usamos para saber si tenemos un archivo añadido o borrado en nuestro proyecto,
+            para saber
             en la
-            rama en la que estamos y si tenemos commits.</span> <br> 
-        <span class="span">git add: es para añadir un archivo a nuestra rama seguidamente ponemos entre comillas el nombre de nuestro
+            rama en la que estamos y si tenemos commits.</span> <br>
+        <span class="span">git add: es para añadir un archivo a nuestra rama seguidamente ponemos entre comillas el
+            nombre de nuestro
             archivo o poner un punto para añadir todos los archios de nuestra carpeta.</span> <br>
-        <span class="span">git rm: lo usamos para borrar un archivo que hayamos añadido, para eliminarlo por completo de nuestra rama
-            usamosgit rm --cached.</span> <br> 
-        <span class="span">git commit: se usa para añadir un commit a nuestra rama, también podemos ponerle un -m seguidamente
+        <span class="span">git rm: lo usamos para borrar un archivo que hayamos añadido, para eliminarlo por completo de
+            nuestra rama
+            usamosgit rm --cached.</span> <br>
+        <span class="span">git commit: se usa para añadir un commit a nuestra rama, también podemos ponerle un -m
+            seguidamente
             ponemos
             entre comillas nuestro ensaje.</span> <br>
-        <span class="span"> git config: muestra configuraciones de git también podemos usar -list para mostrar la configuración por
+        <span class="span"> git config: muestra configuraciones de git también podemos usar -list para mostrar la
+            configuración por
             defecto
             de nuestro git y si añadimos --show-origin inhales nos muestra las configuraciones guardadas y su
             ubicación.</span> <br>
-        <span class="span"> git config --global user.name: cambia de manera global el nombre del usuario, seguidamente ponemos entre
+        <span class="span"> git config --global user.name: cambia de manera global el nombre del usuario, seguidamente
+            ponemos entre
             comillas nuestro nombre.</span> <br>
-        <span class="span"> git config --global user.email: cambia de manera global el email del usuario, seguidamente ponemos entre
+        <span class="span"> git config --global user.email: cambia de manera global el email del usuario, seguidamente
+            ponemos entre
             comillas nuestro nombre.</span> <br>
-        <span class="span"> git log: se usa para ver la historia de nuestros archivos, los commits, el usuario que lo cambió, cuando
+        <span class="span"> git log: se usa para ver la historia de nuestros archivos, los commits, el usuario que lo
+            cambió, cuando
             se
             realizaron los cambios etc. seguidamente ponemos el nombre de nuestro archivo.</span> <br>
 
     </div>
 
-    
+
     <h3>Trabajar Git desde servidores como github a gran escala</h3>
-        <h4 class="spans">Comandos</h4>
-        <p class="spans">
-            Adicionalmente, tenemos otros comandos que nos sirven para trabajar en proyectos muy grandes:
-        </p>
+    <h4 class="spans">Comandos</h4>
+    <p class="spans">
+        Adicionalmente, tenemos otros comandos que nos sirven para trabajar en proyectos muy grandes:
+    </p>
     <div class="listado">
         <ul>
             <li>git log --oneline:Te muestra el id commit y el título del commit.</li>
             <li>git log --decorate: Te muestra donde se encuentra el head point en el log.</li>
             <li>git log --stat: Explica el número de líneas que se cambiaron brevemente.</li>
-            <li>git log -p: Explica el número de líneas que se cambiaron y te muestra que se cambió en el contenido.</li>
-            <li>git shortlog: Indica que commits ha realizado un usuario, mostrando el usuario y el título de sus commits.
+            <li>git log -p: Explica el número de líneas que se cambiaron y te muestra que se cambió en el contenido.
+            </li>
+            <li>git shortlog: Indica que commits ha realizado un usuario, mostrando el usuario y el título de sus
+                commits.
             </li>
             <li>git log --graph --oneline --decorate y</li>
-            <li>git log --pretty=format:"%cn hizo un commit %h el dia %cd": Muestra mensajes personalizados de los commits.
+            <li>git log --pretty=format:"%cn hizo un commit %h el dia %cd": Muestra mensajes personalizados de los
+                commits.
             </li>
             <li>git log -3: Limitamos el número de commits.</li>
             <li>git log --after=“2018-1-2”</li>
